--- a/backend/players/templates/base.html
+++ b/backend/players/templates/base.html
@@ -7,7 +7,6 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    /* Make sure the body takes full height and center content */
     html, body {
       height: 100%;
     }
@@ -18,6 +17,8 @@
 </head>
 <body>
   {% block content %}{% endblock %}
+  <!-- HTMX library -->
+  <script src="https://unpkg.com/htmx.org@1.9.2"></script>
   <!-- Bootstrap JS Bundle (optional) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
