--- a/backend/players/templates/players/login.html
+++ b/backend/players/templates/players/login.html
@@ -6,33 +6,22 @@
 <div class="container full-height">
   <div class="row h-100">
     <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-      
-      <!-- Form for creating a lobby -->
-      <form class="mb-4 w-100" style="max-width: 400px;" action="create_lobby" method="post">
-        <!-- If using Django, include the CSRF token -->
+      <form id="player_connect" class="mb-4 w-100" style="max-width: 400px;" action="{% url 'player_connect' %}" method="post">
         {% csrf_token %}
         <div class="mb-3">
-          <label for="jugador" class="form-label">Jugador</label>
-          <input type="text" class="form-control" id="jugador" name="jugador" placeholder="Ingrese su nombre" required>
+          <label for="player" class="form-label">Player's Name</label>
+          <input type="text" class="form-control" id="player" name="player" placeholder="Enter your name" required>
         </div>
-        <button type="submit" class="btn btn-primary w-100">Crear un Lobby</button>
+        <button type="submit" class="btn btn-primary w-100">Login</button>
       </form>
-
-      <!-- Form for joining a lobby -->
-      <form class="w-100" style="max-width: 400px;" action="/join_lobby" method="post">
-        {% csrf_token %}
-        <div class="mb-3">
-          <label for="codigo" class="form-label">Código del Lobby</label>
-          <input type="text" class="form-control" id="codigo" name="codigo" placeholder="Ingrese el código del lobby" required>
-        </div>
-        <div class="mb-3">
-          <label for="personaje" class="form-label">Personaje</label>
-          <input type="text" class="form-control" id="personaje" name="personaje" placeholder="Ingrese su personaje" required>
-        </div>
-        <button type="submit" class="btn btn-success w-100">Unirse a un Lobby</button>
-      </form>
-      
     </div>
   </div>
 </div>
+
+<script>
+// When the player types in the create lobby form, copy the value to the join lobby form's hidden field.
+document.getElementById('player').addEventListener('input', function() {
+    document.getElementById('player-hidden').value = this.value;
+});
+</script>
 {% endblock content %}
