--- a/backend/players/templates/base.html
+++ b/backend/players/templates/base.html
@@ -1,25 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}My Lobby App{% endblock %}</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+      {% block title %}My Lobby App{% endblock %}
+    </title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+          rel="stylesheet">
+    <style>
     html, body {
       height: 100%;
     }
     .full-height {
       height: 100%;
     }
-  </style>
-</head>
-<body>
-  {% block content %}{% endblock %}
-  <!-- HTMX library -->
-  <script src="https://unpkg.com/htmx.org@1.9.2"></script>
-  <!-- Bootstrap JS Bundle (optional) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+
+    </style>
+    <!-- HTMX library -->
+    <script src="https://unpkg.com/htmx.org@1.9.2"></script>
+    <!-- Bootstrap JS Bundle (optional) -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  </head>
+  <body>
+    <div class="container full-height d-flex justify-content-center align-items-center flex-column">
+      <div class="w-75">
+        {% block navbar %}
+        {% endblock navbar %}
+      </div>
+      <div class="d-flex h-75 w-75 card p-2">
+        <div class="row text-center">
+          {% block player %}
+          {% endblock player %}
+        </div>
+        <div class="row overflow-auto m-3">
+          <div class="col d-flex flex-column justify-content-center align-items-center text-center">
+            {% block content %}
+            {% endblock content %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
