--- a/backend/players/templates/players/lobbies.html
+++ b/backend/players/templates/players/lobbies.html
@@ -1,22 +1,47 @@
 {% extends "base.html" %}
-
-{% block title %}Lobby Page{% endblock %}
-
+{% block title %}
+  Lobby Page
+{% endblock title %}
+{% block player %}
+  <h2>{{ player.name }}</h2>
+{% endblock player %}
+{% block navbar %}
+  <div class="container">
+    <!-- Navigation Pills -->
+    <ul class="nav nav-tabs" id="pills-tab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <a class="nav-link {% if lobbies|length > 0 %}active{% endif %}"
+           id="my-lobbies-tab"
+           data-bs-toggle="pill"
+           href="#my-lobbies"
+           role="tab"
+           aria-controls="my-lobbies"
+           aria-selected="true">My Lobbies</a>
+      </li>
+      <li class="nav-item" role="presentation">
+        <a class="nav-link {% if lobbies|length == 0 %}active{% endif %}"
+           id="other-lobbies-tab"
+           data-bs-toggle="pill"
+           href="#other-lobbies"
+           role="tab"
+           aria-controls="other-lobbies"
+           aria-selected="false">Other Lobbies</a>
+      </li>
+    </ul>
+  </div>
+{% endblock navbar %}
 {% block content %}
-<div class="container full-height">
-  <div class="row h-100">
-    <div class="col-12 d-flex flex-column justify-content-center align-items-center">
-      <h2>
-        {{player.name}}
-      </h2>
-    {% comment %} TODO - CREATE TWO CARDS {% endcomment %}
-      <div id="my_lobbies">
-        {% include "players/partials/lobby_list.html" %}
-      </div>
-      <div id="other_lobbies">
-        {% include "players/partials/create_or_join_lobby.html" %}
-      </div>      
+  <div class="container mt-4 ">
+    <!-- Tab Content -->
+    <div class="tab-content" id="pills-tabContent">
+      <div class="tab-pane fade {% if lobbies|length > 0 %} show active{% endif %}"
+           id="my-lobbies"
+           role="tabpanel"
+           aria-labelledby="my-lobbies-tab">{% include "players/partials/lobby_list.html" %}</div>
+      <div class="tab-pane fade {% if lobbies|length == 0 %} show active{% endif %}"
+           id="other-lobbies"
+           role="tabpanel"
+           aria-labelledby="other-lobbies-tab">{% include "players/partials/create_or_join_lobby.html" %}</div>
     </div>
   </div>
-</div>
 {% endblock content %}
