--- a/backend/players/templates/players/partials/lobby_list.html
+++ b/backend/players/templates/players/partials/lobby_list.html
@@ -1,30 +1,80 @@
-
-
-{% if player.get_my_lobbies|length > 0%}
-{% comment %} TODO - DELETE LOBBIES {% endcomment %}
-<h2 class="mb-3">Lobbies I DM:</h2>
-<ul>
-  {% for lobby in player.get_my_lobbies %}
-  <form id="join-lobby-{{lobby.code}}-form" class="w-100" style="max-width: 400px;" action="{% url 'join_lobby' %}" method="get">
-    <input type="hidden" id="player-hidden" name="player" value={{player.name}}>
-    <input type="hidden" id="code-hidden" name="code" value={{lobby.code}}>
-    <li class="list-group-item" draggable="true" data-id="{{ lobby.id }}">
-      <button type="submit" class="btn btn-success w-100">Lobby n°{{ lobby.code }}</button>
-    </li>
-  </form>
-  
-  {% endfor %}
-</ul>
-{% endif %}
-
-{% if player.get_playing_lobbies|length > 0%}
-{% comment %} TODO - EXIT LOBBIES {% endcomment %}
-<h2 class="mb-3">Lobbies I Play in:</h2>
-<ul>
-  {% for lobby in player.get_playing_lobbies %}
-  <li class="list-group-item" draggable="true" data-id="{{ lobby.id }}">
-    Lobby n°{{ lobby.code }}
-  </li>
-  {% endfor %}
-</ul>
-{% endif %}
+<div class="d-flex justify-content-center align-items-center flex-column">
+  {% if player.get_my_lobbies|length > 0 %}
+    {% comment %} TODO - DELETE LOBBIES {% endcomment %}
+    <h4 class="mb-3">As a DM:</h4>
+    <ul class="list-group list-group-flush w-100">
+      {% for lobby in player.get_my_lobbies %}
+        <li class="list-group-item justify-content-between align-items-center d-flex"
+            data-id="{{ lobby.id }}">
+          <div class="flex-grow-1">Lobby n°{{ lobby.code }}</div>
+          <form id="join-lobby-{{ lobby.code }}-form"
+                action="{% url 'join_lobby' %}"
+                method="get">
+            <input type="hidden"
+                   id="player-hidden"
+                   name="player"
+                   value="{{ player.name }}">
+            <input type="hidden" id="code-hidden" name="code" value={{ lobby.code }}>
+            <button type="submit" class="btn btn-success mx-3">
+              <i class="bi bi-box-arrow-in-right"></i>
+            </button>
+          </form>
+          <form id="join-lobby-{{ lobby.code }}-form"
+                hx-target="#my-lobbies"
+                hx-post="{% url 'leave_lobby' %}"
+                hx-swap="innerHTML"
+                method="post">
+            {% csrf_token %}
+            <input type="hidden"
+                   id="player-hidden"
+                   name="player"
+                   value="{{ player.name }}">
+            <input type="hidden" id="code-hidden" name="code" value={{ lobby.code }}>
+            <button type="submit" class="btn btn-danger">
+              <i class="bi bi-trash"></i>
+            </button>
+          </form>
+        </li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+  {% if player.get_playing_lobbies|length > 0 %}
+    {% comment %} TODO - EXIT LOBBIES {% endcomment %}
+    <h4 class="mb-3">As a Player:</h4>
+    <ul class="list-group list-group-flush">
+      {% for lobby in player.get_playing_lobbies %}
+        <li class="list-group-item justify-content-between align-items-center d-flex"
+            data-id="{{ lobby.id }}">
+          <div class="flex-grow-1">Lobby n°{{ lobby.code }}</div>
+          <form id="join-lobby-{{ lobby.code }}-form"
+                action="{% url 'join_lobby' %}"
+                method="get">
+            <input type="hidden"
+                   id="player-hidden"
+                   name="player"
+                   value="{{ player.name }}">
+            <input type="hidden" id="code-hidden" name="code" value={{ lobby.code }}>
+            <button type="submit" class="btn btn-success mx-3">
+              <i class="bi bi-box-arrow-in-right"></i>
+            </button>
+          </form>
+          <form id="join-lobby-{{ lobby.code }}-form"
+                hx-target="#my-lobbies"
+                hx-post="{% url 'leave_lobby' %}"
+                hx-swap="innerHTML"
+                method="post">
+            {% csrf_token %}
+            <input type="hidden"
+                   id="player-hidden"
+                   name="player"
+                   value="{{ player.name }}">
+            <input type="hidden" id="code-hidden" name="code" value={{ lobby.code }}>
+            <button type="submit" class="btn btn-danger">
+              <i class="bi bi-trash"></i>
+            </button>
+          </form>
+        </li>
+      {% endfor %}
+    </ul>
+  {% endif %}
+</div>
