--- a/backend/players/templates/players/partials/character_list.html
+++ b/backend/players/templates/players/partials/character_list.html
@@ -1,9 +1,52 @@
-{% comment %} TODO - MOVE CHARACTERS ORDER {% endcomment %}
-{% comment %} TODO - MOVE CHANGE INITIATIVE {% endcomment %}
-{% comment %} TODO - REMOVE CHARACTER FROM INITIATIVE {% endcomment %}
-{% comment %} TODO - ASSIGN PLAYER TO CHARACTER {% endcomment %}
 {% for character in characters %}
-  <li class="list-group-item" draggable="true" data-id="{{ character.id }}">
-    {{ character.name }} - {{ character.player.name }}- Initiative: {{ character.initiative }}
+  <li class="list-group-item d-flex justify-content-between align-items-center gap-3"
+      data-id="{{ character.id }}">
+    <span class="flex-grow-1">{{ character }} - Initiative: {{ character.initiative }}</span>
+    {% if player.role == "DM" or player.role == "PA" %}
+      <form hx-post="{% url 'move_character' %}"
+            hx-swap="innerHTML"
+            hx-target="#character-list">
+        {% csrf_token %}
+        <input type="hidden"
+               name="player_lobby_id"
+               id="player_lobby_id"
+               value="{{ player.id }}">
+        <input type="hidden"
+               name="character_id"
+               id="character_id"
+               value="{{ character.id }}">
+        <input type="hidden" name="direction" id="direction" value="up">
+        <button type="submit" class="btn border">
+          <i class="bi bi-arrow-up"></i>
+        </button>
+      </form>
+      <form hx-post="{% url 'move_character' %}"
+            hx-swap="innerHTML"
+            hx-target="#character-list">
+        {% csrf_token %}
+        <input type="hidden"
+               name="player_lobby_id"
+               id="player_lobby_id"
+               value="{{ player.id }}">
+        <input type="hidden"
+               name="character_id"
+               id="character_id"
+               value="{{ character.id }}">
+        <input type="hidden" name="direction" id="direction" value="down">
+        <button type="submit" class="btn border">
+          <i class="bi bi-arrow-down"></i>
+        </button>
+      </form>
+    {% endif %}
+    {% if player.role == "DM" or player.role == "PA" or player.id == character.player.id %}
+      <button class="btn btn-sm btn-info edit-character"
+              hx-get="{% url 'load_edit_modal' player.id character.id %}"
+              hx-target="#modal-container"
+              hx-swap="innerHTML">
+        <i class="bi bi-pencil"></i>
+      </button>
+    {% endif %}
   </li>
 {% endfor %}
+<!-- Modal container -->
+<div id="modal-container"></div>
