--- a/backend/players/templates/players/partials/create_or_join_lobby.html
+++ b/backend/players/templates/players/partials/create_or_join_lobby.html
@@ -14,7 +14,7 @@
   <form id="join-lobby-form"
         class="w-100"
         style="max-width: 400px"
-        action="{% url 'join_lobby' %}"
+        action="{% url 'join_lobby_first_time' %}"
         method="get">
     <input type="hidden"
            id="player-hidden"
