--- a/backend/players/templates/base.html
+++ b/backend/players/templates/base.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="csrf-token" content="{{ csrf_token }}">
     <title>
-      {% block title %}My Lobby App{% endblock %}
+      {% block title %}
+        My Lobby App
+      {% endblock title %}
     </title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -16,26 +19,50 @@
     .full-height {
       height: 100%;
     }
+    ::-webkit-scrollbar {
+      width: 5px;
+      height: 5px;
+    }
+    
+    /* Track */
+    ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3); 
+        -webkit-border-radius: 2px;
+        border-radius: 10px;
+    }
+    
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        background: lightgray; 
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    }
+    ::-webkit-scrollbar-thumb:window-inactive {
+        background: gray; 
+    }
 
     </style>
     <!-- HTMX library -->
     <script src="https://unpkg.com/htmx.org@1.9.2"></script>
     <!-- Bootstrap JS Bundle (optional) -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <div class="container full-height d-flex justify-content-center align-items-center flex-column">
-      <div class="w-75">
+      <div>
         {% block navbar %}
         {% endblock navbar %}
       </div>
-      <div class="d-flex h-75 w-75 card p-2">
+      {% comment %} TODO CHANGE OVERFLOW BARRA {% endcomment %}
+      <div class="d-flex card p-2 overflow-auto">
         <div class="row text-center">
           {% block player %}
           {% endblock player %}
         </div>
-        <div class="row overflow-auto m-3">
+        <div class="row m-3">
           <div class="col d-flex flex-column justify-content-center align-items-center text-center">
             {% block content %}
             {% endblock content %}
@@ -43,5 +70,13 @@
         </div>
       </div>
     </div>
+    <script>
+      function confirmClick(e)
+      {
+          if(!confirm('Are you sure?')) {
+              e.preventDefault();
+          }
+      }
+    </script>
   </body>
 </html>
