--- a/backend/players/templates/players/lobbies.html
+++ b/backend/players/templates/players/lobbies.html
@@ -3,14 +3,15 @@
   Lobby Page
 {% endblock title %}
 {% block player %}
-  <h2>{{ player.name }}</h2>
+  <h2>{{ player }}</h2>
 {% endblock player %}
 {% block navbar %}
   <div class="container">
     <!-- Navigation Pills -->
     <ul class="nav nav-tabs" id="pills-tab" role="tablist">
+      {% if lobbies|length > 0 %}
       <li class="nav-item" role="presentation">
-        <a class="nav-link {% if lobbies|length > 0 %}active{% endif %}"
+        <a class="nav-link active"
            id="my-lobbies-tab"
            data-bs-toggle="pill"
            href="#my-lobbies"
@@ -18,6 +19,7 @@
            aria-controls="my-lobbies"
            aria-selected="true">My Lobbies</a>
       </li>
+      {% endif %}
       <li class="nav-item" role="presentation">
         <a class="nav-link {% if lobbies|length == 0 %}active{% endif %}"
            id="other-lobbies-tab"
