--- a/backend/players/templates/players/lobby.html
+++ b/backend/players/templates/players/lobby.html
@@ -3,16 +3,16 @@
   Lobby Page
 {% endblock title %}
 {% block player %}
-  <h2>{{ player.name }}</h2>
+  <h2>{{ player.player }}</h2>
 {% endblock player %}
 {% block navbar %}
   <div class="container">
-    <!-- Navigation Pills -->
-    <ul class="nav nav-tabs" id="pills-tab" role="tablist">
+    <!-- Navigation Tabs -->
+    <ul class="nav nav-tabs" id="tabs" role="tablist">
       <li class="nav-item" role="presentation">
         <a class="nav-link {% if characters|length > 0 %}active{% endif %}"
            id="characters-tab"
-           data-bs-toggle="pill"
+           data-bs-toggle="tab"
            href="#characters"
            role="tab"
            aria-controls="characters"
@@ -21,28 +21,28 @@
       {% if player.role == "DM" or player.role == "PA" %}
         <li class="nav-item" role="presentation">
           <a class="nav-link {% if characters|length == 0 %}active{% endif %}"
-             id="add-character-tab"
-             data-bs-toggle="pill"
-             href="#add-character"
+             id="add-characters-tab"
+             data-bs-toggle="tab"
+             href="#add-characters"
              role="tab"
-             aria-controls="add-character"
-             aria-selected="false">Add characters</a>
+             aria-controls="add-characters"
+             aria-selected="false">Add Characters</a>
         </li>
       {% endif %}
     </ul>
   </div>
 {% endblock navbar %}
 {% block content %}
-  <div class="container mt-4 ">
+  <div class="container mt-4">
     <div id="sse-connection"
          hx-ws="connect:/ws/lobby/{{ player.lobby.code }}/"></div>
     <!-- Tab Content -->
-    <div class="tab-content" id="pills-tabContent">
+    <div class="tab-content" id="tabs-content">
       <div class="tab-pane fade {% if characters|length > 0 %}show active{% endif %}"
            id="characters"
            role="tabpanel"
            aria-labelledby="characters-tab">
-        <h2 class="mb-3">Characters in Lobby {{ player.lobby.code }}</h2>
+        <h2 class="mb-3">Characters in Lobby {{ player.lobby }}</h2>
         <ul id="character-list"
             class="list-group"
             style="max-width: 400px"
@@ -60,8 +60,8 @@
   </div>
   <!-- Simple HTML5 Drag & Drop for reordering -->
   <script>
-  document.getElementById('sse-connection').addEventListener('character_update', function(evt) {
-    console.log("Received character_update event", evt);
-  });
+    document.getElementById('sse-connection').addEventListener('character_update', function(evt) {
+      console.log("Received character_update event", evt);
+    });
   </script>
 {% endblock content %}
