--- a/backend/players/templates/players/partials/lobby_list.html
+++ b/backend/players/templates/players/partials/lobby_list.html
@@ -1,12 +1,11 @@
 <div class="d-flex justify-content-center align-items-center flex-column">
   {% if player.get_my_lobbies|length > 0 %}
-    {% comment %} TODO - DELETE LOBBIES {% endcomment %}
     <h4 class="mb-3">As a DM:</h4>
     <ul class="list-group list-group-flush w-100">
       {% for lobby in player.get_my_lobbies %}
         <li class="list-group-item justify-content-between align-items-center d-flex"
             data-id="{{ lobby.id }}">
-          <div class="flex-grow-1">Lobby n°{{ lobby.code }}</div>
+          <div class="flex-grow-1">Lobby {{ lobby }}</div>
           <form id="join-lobby-{{ lobby.code }}-form"
                 action="{% url 'join_lobby' %}"
                 method="get">
@@ -30,7 +29,7 @@
                    name="player"
                    value="{{ player.name }}">
             <input type="hidden" id="code-hidden" name="code" value={{ lobby.code }}>
-            <button type="submit" class="btn btn-danger">
+            <button type="submit" class="btn btn-danger" onclick="confirmClick(event)">
               <i class="bi bi-trash"></i>
             </button>
           </form>
@@ -39,13 +38,12 @@
     </ul>
   {% endif %}
   {% if player.get_playing_lobbies|length > 0 %}
-    {% comment %} TODO - EXIT LOBBIES {% endcomment %}
     <h4 class="mb-3">As a Player:</h4>
     <ul class="list-group list-group-flush">
       {% for lobby in player.get_playing_lobbies %}
         <li class="list-group-item justify-content-between align-items-center d-flex"
             data-id="{{ lobby.id }}">
-          <div class="flex-grow-1">Lobby n°{{ lobby.code }}</div>
+          <div class="flex-grow-1">Lobby {{ lobby }}</div>
           <form id="join-lobby-{{ lobby.code }}-form"
                 action="{% url 'join_lobby' %}"
                 method="get">
@@ -69,7 +67,7 @@
                    name="player"
                    value="{{ player.name }}">
             <input type="hidden" id="code-hidden" name="code" value={{ lobby.code }}>
-            <button type="submit" class="btn btn-danger">
+            <button type="submit" class="btn btn-danger" onclick="confirmClick(event)">
               <i class="bi bi-trash"></i>
             </button>
           </form>
