--- a/players/templates/players/partials/edit_character_modal.html
+++ b/players/templates/players/partials/edit_character_modal.html
@@ -64,8 +64,9 @@
     });
     function deleteChar(e){
         if(!confirm('Are you sure?')) {
-            myModal.hide();
             e.preventDefault();
+        }else{
+            myModal.hide();
         }
     }
 </script>
