--- a/players/templates/players/login.html
+++ b/players/templates/players/login.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% block title %}Lobby Page{% endblock title%}
+{% block title %}
+  Lobby Page
+{% endblock title %}
 {% block content %}
   <form id="player_connect"
         class="mb-4 w-100"
