--- a/players/templates/players/partials/edit_character_modal.html
+++ b/players/templates/players/partials/edit_character_modal.html
@@ -23,11 +23,20 @@
                     <input type="hidden" name="character_id" value="{{ character.id }}">
                     <div class="mb-3 {% if not character.player.id == player_lobby.id and not player_lobby.role == 'DM' and not player_lobby.role == 'PA' %} d-none {% endif %}">
                         <label for="initiative" class="form-label">Initiative</label>
-                        <input type="text"
+                        <input type="number"
                                class="form-control"
                                id="initiative"
                                name="initiative"
                                value="{{ character.initiative }}"
+                               >
+                    </div>
+                    <div class="mb-3 {% if not character.player.id == player_lobby.id and not player_lobby.role == 'DM' and not player_lobby.role == 'PA' %} d-none {% endif %}">
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text"
+                               class="form-control"
+                               id="name"
+                               name="name"
+                               value="{{ character.name }}"
                                >
                     </div>
                     <div class="mb-3 {% if not player_lobby.role == 'DM' and not player_lobby.role == 'PA' %} d-none {% endif %}">
